power button works

--- a/terminal-portfolio/src/components/Home/home.module.scss
+++ b/terminal-portfolio/src/components/Home/home.module.scss
@@ -14,7 +14,7 @@
     }
 }
 
-.powerButton {
+.powerButtonIgnore {
     text-align: center;
     transition: .5s;
     padding: .5em;
@@ -33,7 +33,7 @@
     color: black;
 }
 
-.powerButton:hover {
+.powerButtonIgnore:hover {
     background-color: white;
     color: black;
     box-shadow: 0px 5px red;
